[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GameSettings/Scripts/AudioSettings.gd" type="Script" id=1]
[ext_resource path="res://addons/GameSettings/Scripts/DisplaySettings.gd" type="Script" id=2]

[node name="GameOptions" type="CanvasLayer"]

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MasterBG" type="ColorRect" parent="TabContainer/Audio"]
margin_left = 141.0
margin_top = 66.0
margin_right = 774.0
margin_bottom = 82.0
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master_Slider" type="HSlider" parent="TabContainer/Audio"]
margin_left = 474.694
margin_top = 66.0
margin_right = 737.694
margin_bottom = 82.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterText" type="Label" parent="TabContainer/Audio"]
margin_left = 150.0
margin_top = 67.0
margin_right = 198.0
margin_bottom = 81.0
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterBG2" type="ColorRect" parent="TabContainer/Audio"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 141.0
margin_top = 66.0
margin_right = 133.0
margin_bottom = 30.0
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterText2" type="Label" parent="TabContainer/Audio"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 66.0
margin_right = 142.0
margin_bottom = 30.0
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master_Value" type="Label" parent="TabContainer/Audio"]
margin_left = 745.876
margin_top = 67.591
margin_right = 785.876
margin_bottom = 81.591
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXBG" type="ColorRect" parent="TabContainer/Audio"]
margin_left = 141.0
margin_top = 103.0
margin_right = 774.0
margin_bottom = 119.0
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Slider" type="HSlider" parent="TabContainer/Audio"]
margin_left = 474.0
margin_top = 103.0
margin_right = 737.0
margin_bottom = 119.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXText" type="Label" parent="TabContainer/Audio"]
margin_left = 150.0
margin_top = 104.25
margin_right = 198.0
margin_bottom = 118.25
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Value" type="Label" parent="TabContainer/Audio"]
margin_left = 745.876
margin_top = 104.575
margin_right = 785.876
margin_bottom = 118.575
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicBG" type="ColorRect" parent="TabContainer/Audio"]
margin_left = 141.0
margin_top = 140.0
margin_right = 774.0
margin_bottom = 156.0
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Slider" type="HSlider" parent="TabContainer/Audio"]
margin_left = 474.0
margin_top = 140.0
margin_right = 737.0
margin_bottom = 156.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicText" type="Label" parent="TabContainer/Audio"]
margin_left = 150.0
margin_top = 141.5
margin_right = 198.0
margin_bottom = 155.5
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Value" type="Label" parent="TabContainer/Audio"]
margin_left = 745.876
margin_top = 140.834
margin_right = 785.876
margin_bottom = 154.834
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBG" type="ColorRect" parent="TabContainer/Audio"]
margin_left = 141.0
margin_top = 177.0
margin_right = 774.0
margin_bottom = 193.0
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_Slider" type="HSlider" parent="TabContainer/Audio"]
margin_left = 474.0
margin_top = 177.0
margin_right = 737.0
margin_bottom = 193.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="TabContainer/Audio"]
margin_left = 150.0
margin_top = 177.75
margin_right = 198.0
margin_bottom = 191.75
text = "Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog_Value" type="Label" parent="TabContainer/Audio"]
margin_left = 745.876
margin_top = 178.001
margin_right = 785.876
margin_bottom = 192.001
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="TabContainer/Audio"]
margin_left = 737.308
margin_top = 393.628
margin_right = 778.308
margin_bottom = 413.628
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="ResolitionBG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 69.0
margin_right = 774.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
mouse_filter = 2
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution_Options" type="OptionButton" parent="TabContainer/Display"]
margin_left = 475.0
margin_top = 74.0
margin_right = 738.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( -116.827, 169.768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 77.25
margin_right = 218.0
margin_bottom = 91.25
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowModeBG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 124.0
margin_right = 774.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window_Mode" type="OptionButton" parent="TabContainer/Display"]
margin_left = 475.0
margin_top = 129.791
margin_right = 738.0
margin_bottom = 149.791
rect_pivot_offset = Vector2( -116.827, 169.768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowModeText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 132.464
margin_right = 241.0
margin_bottom = 146.464
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "Window Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSyncBG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 179.0
margin_right = 774.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSync" type="CheckBox" parent="TabContainer/Display"]
margin_left = 582.943
margin_top = 184.0
margin_right = 606.943
margin_bottom = 208.0
rect_pivot_offset = Vector2( -116.827, 169.768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSyncText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 187.731
margin_right = 241.0
margin_bottom = 201.731
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "VSync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSBG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 234.0
margin_right = 774.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="SpinBox" parent="TabContainer/Display"]
margin_left = 558.0
margin_top = 237.0
margin_right = 632.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( -116.827, 169.768 )
max_value = 144.0
step = 30.0
value = 60.0
align = 1
suffix = ".000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 242.189
margin_right = 241.0
margin_bottom = 256.19
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSAABG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 289.0
margin_right = 774.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSAA" type="OptionButton" parent="TabContainer/Display"]
margin_left = 558.0
margin_top = 294.0
margin_right = 642.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( -116.827, 169.768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSAAText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 297.0
margin_right = 241.0
margin_bottom = 311.001
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "MSAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HDRBG" type="ColorRect" parent="TabContainer/Display"]
margin_left = 141.0
margin_top = 344.0
margin_right = 774.0
margin_bottom = 375.0
rect_pivot_offset = Vector2( 217.173, 174.768 )
color = Color( 0.0941176, 0.0980392, 0.168627, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HDR" type="CheckBox" parent="TabContainer/Display"]
margin_left = 582.943
margin_top = 347.75
margin_right = 606.943
margin_bottom = 371.75
rect_pivot_offset = Vector2( -116.827, 169.768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HDRText" type="Label" parent="TabContainer/Display"]
margin_left = 150.0
margin_top = 352.0
margin_right = 241.0
margin_bottom = 366.001
rect_pivot_offset = Vector2( 208.173, 169.768 )
text = "HDR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="TabContainer/Display"]
margin_left = 737.308
margin_top = 393.628
margin_right = 778.308
margin_bottom = 413.628
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="TabContainer/Audio/Master_Slider" to="TabContainer/Audio" method="_on_Master_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/SFX_Slider" to="TabContainer/Audio" method="_on_SFX_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Music_Slider" to="TabContainer/Audio" method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Dialog_Slider" to="TabContainer/Audio" method="_on_Dialog_Slider_value_changed"]
[connection signal="pressed" from="TabContainer/Audio/SaveButton" to="TabContainer/Audio" method="_on_SaveButton_pressed"]
[connection signal="item_selected" from="TabContainer/Display/Resolution_Options" to="TabContainer/Display" method="_on_Resolution_Options_item_selected"]
[connection signal="item_selected" from="TabContainer/Display/Window_Mode" to="TabContainer/Display" method="_on_Window_Mode_selected"]
[connection signal="toggled" from="TabContainer/Display/VSync" to="TabContainer/Display" method="_on_VSync_toggled"]
[connection signal="value_changed" from="TabContainer/Display/FPS" to="TabContainer/Display" method="_on_FPS_value_changed"]
[connection signal="item_selected" from="TabContainer/Display/MSAA" to="TabContainer/Display" method="_on_MSAA_item_selected"]
[connection signal="toggled" from="TabContainer/Display/HDR" to="TabContainer/Display" method="_on_HDR_toggled"]
[connection signal="pressed" from="TabContainer/Display/SaveButton" to="TabContainer/Display" method="_on_SaveButton_pressed"]
